2004-07-18  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/accidental-engraver.cc (process_acknowledged_grobs):
	make accidental appear to come from note head engraver.

	* lily/slur-quanting.cc: new file.
	(score_extra_encompass): new function. Avoid scripts and
	accidentals

2004-07-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/include/lily-guile.hh: Remove guile-1.4 compatibility.
	This greatly reduces the number of files that get recompiled
	after touching config.hh.

	* config.hh.in: Remove GUILE_*_VERSION.

	* lily/new-slur.cc: Resolve conflicts.

	* lily/stem-engraver.cc	(make_stem): New method.

	* lily/include/script-interface.hh:
	* lily/script-interface.cc: New file.

	* lily/include/script.hh:
	* lily/script.cc: Remove.

	* lily/music.cc (duration_log): New method.

	* lily/script.cc (struct Skript): Remove.

	* lily/new-slur.cc (get_base_attachments): Try at articulations.
	Lots of coding cleanups (Stom).

2004-07-18  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/new-slur.cc (avoid_staff_line): new function: avoid
	collisions with staff lines.

	* lily/my-lily-parser.cc (LY_DEFINE): add directory of argument to
	global_path

	* scm/define-grobs.scm (all-grob-descriptions): set ratio
	.25. This flattens short slurs.

	* lily/new-slur.cc (enumerate_attachments): move X of attachment
	points for tilted slurs.

	* input/regression/slur-tilt.ly: new file.

	* ly/engraver-init.ly (AncientRemoveEmptyStaffContext): shorten
	stems of 16th graces too.

	* lily/beam-quanting.cc (score_forbidden_quants): make forbidden
	quant penalty dependent on how much the line is in the gap.

	* input/regression/grace-stem-length.ly: new file.

	* lily/beam-quanting.cc (score_forbidden_quants): remove
	interquant check. The penalty of 1000 is much too harsh, and the
	inter case should be caught by check-staff-line-in-gap check.

	* lily/scm-option.cc: move debug-beam to \paper.

	* scripts/lilypond-book.py (Lilypond_snippet.write_ly): create