@@ -14,6 +14,6 @@ LYINC_FILES := $(wildcard *.lyinc)
 
 TEXINFO_SOURCES += $(TELY_FILES) $(ITELY_FILES) $(ITEXI_FILES)
 
-EXTRA_DIST_FILES += $(TELY_FILES) $(LY_FILES) $(ITEXI_FILES) $(ITELY_FILES) $(LYINC_FILES)
+EXTRA_DIST_FILES +=$(TELY_FILES) $(LY_FILES) $(ITEXI_FILES) $(ITELY_FILES) $(LYINC_FILES)
 
 DVIPS_FLAGS= -u+ec-mftrace.map -u +lilypond.map  -Ppdf
